# torch2tflite

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  black.toml  converter.py  converter_readme.md  pyproject.toml  setup.py
converter/: __init__.py  torch_to_tflite.py
torch2tflite/: converter.py
torch2tflite/converters/: __init__.py  onnx_to_tf.py  tf_to_tflite.py  torch_to_onnx.py
torch2tflite/loaders/: tflite_loader.py  torch_loader.py
torch2tflite/utils/: __init__.py  calc_error.py  sample_loader.py
torch2tflite/utils/inference/: inference_tflite.py  inference_torch.py
