[tool.poetry]
name = "torch2tflite"
version = "1.1.0"
description = "PyTorch to TFLite model converter."
authors = ["omerferhatt <omer.sarioglu@smartalpha.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "^2.8.0"
tflite-runtime = "^2.8.0"
torch = "^1.11.0"
tensorflow-addons = "^0.16.1"
opencv-python-headless = "^4.5.5"
onnx = "^1.11.0"
onnx-tf = "^1.10.0"
numpy = "^1.22.3"
tensorflow-probability = "^0.16.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
